# C3E

./: .gitignore  README.md  Utility.py  __init__.py  c3e.py  datasets.py  empirical_variance.py  graph_nn_optimization.py  propanalyzer.py  pyproject.toml  requirements.txt  sigma_calculator.py  train_val_test.py  utility.py  utils.py
Implementations/: C3E_estimations.py  c3e.py  propanalyzer.py  train_val_test.py  utility.py
Model Factory/: appnpconv.py  chebiiconv.py  gprconv.py  jacobiconv.py  model.py
Model_box/: chebiiconv.py  gat_box.py  gcn_box.py  gdc_box.py  gprconv.py  model_factory.py  other_conv.py
Model_factory/: __init__.py  activations.py  appnpconv.py  chebiiconv.py  gprconv.py  jacobiconv.py  model.py
Train_Val_Test/: C2ME-GCN-AmazonComputers.py  C2ME-GCN-AmazonPhoto.py  C2ME-GCN-Citeseer.py  C2ME-GCN-Cora.py  C2ME-GCN-Pubmed.py  C3E-GAT-AmazonComputers.py  C3E-GAT-AmazonPhoto.py  C3E-GAT-Citeseer.py  C3E-GAT-Cora.py  C3E-GAT-Pubmed.py  C3E-GCN-AmazonComputers.py  C3E-GCN-AmazonPhoto.py  C3E-GCN-Citeseer.py  C3E-GCN-Cora.py  C3E-GCN-Pubmed.py  C3E-GDC-AmazonComputers.py  C3E-GDC-AmazonPhoto.py  C3E-GDC-Citeseer  C3E-GDC-Cora.py  C3E-GDC-Pubmed.py
Visualizations/: __init__.py  entropy_energy.py  representation_entropy.py
tests/: test_core.py
tools/: inspect_architectures.py  inspect_cora_architectures.py  inspect_cora_gat_c3e.py  inspect_gat_c3e.py  run_all_ops.py  run_cora_eta045_all_ops.py  run_cora_gat_activation_grid.py  run_cora_gat_c3e_candidates.py  run_cora_gat_variance_probe.py  run_gat_activation_grid.py  run_gat_c3e_candidates.py  (+1 more)
