[project]
name = "c3e"
version = "0.1.0"
description = "Channel Capacity Constrained Estimation for graph neural networks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torch-geometric",
    "torch-sparse",
    "ogb",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
